--- a/app/views/workouts/show.html.slim
+++ b/app/views/workouts/show.html.slim
@@ -1,10 +1,5 @@
 .container
-  h1 = @workout.name
-  p #{@workout.objective_message}
-  == render @workout.exercises
-
-  = link_to 'Log', new_workout_log_path(@workout)
-  span | 
-  = link_to 'Edit', edit_workout_path(@workout)
+  = link_to 'Edit Workout', edit_workout_path(@workout)
   span  |
   = link_to 'Back', workouts_path
+  = render @workout
