--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,10 +9,13 @@ html lang="en"
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .container-fluid
-      nav.navbar.navbar-expand-sm.navbar-dark.bg-dark.sticky-top
-        = link_to 'WODTracker', root_path, class: 'navbar-brand'
-        .navbar-nav.mr-auto
-          = link_to 'Workouts', workouts_path, class: 'nav-item nav-link'
-          = link_to 'PRs', personal_records_user_movement_logs_path(Current.user), class: 'nav-item nav-link'
+      - if user_signed_in?
+        nav.navbar.navbar-expand-sm.navbar-dark.bg-dark.sticky-top
+          = link_to 'WODTracker', root_path, class: 'navbar-brand'
+          .navbar-nav.mr-auto
+            = link_to 'Workouts', workouts_path, class: 'nav-item nav-link'
+            = link_to 'PRs', personal_records_user_movement_logs_path(Current.user), class: 'nav-item nav-link'
+          .navbar-nav
+            = link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-item nav-link'
       = flash_messages
       = yield
