--- a/app/views/workouts/_workout.html.slim
+++ b/app/views/workouts/_workout.html.slim
@@ -3,9 +3,17 @@ p #{workout_objective workout}
 ul.list-group
   - workout.exercises.each do |exercise|
     li.list-group-item #{pluralize exercise.reps, exercise.movement.name} #{exercise.measurement_message} #{exercise.male_rx}#{'/' if exercise.male_rx}#{exercise.female_rx}
-br
 - if Current.user.logged_workout? @workout
-  h2 Results
-  = render @workout.logs.find_by(user: Current.user)
+  h2.mt-5 Results
+  table.table.table-hover
+    thead
+      tr
+        th scope="col" Date
+        th scope="col" Results
+    tbody
+      - Current.user.logs.where(workout: @workout).each do |log|
+        tr
+          th scope="row" = link_to log.created_at, log
+          td #{pluralize log.measurement_value, log.workout.measurement_message}
 - else
   = link_to 'Log', new_workout_log_path(@workout), class: 'btn btn-outline-primary'
