--- a/app/views/workouts/_workout.html.slim
+++ b/app/views/workouts/_workout.html.slim
@@ -1,19 +1,20 @@
-h1 = workout.name
-p #{workout_objective workout}
-ul.list-group
-  - workout.exercises.each do |exercise|
-    li.list-group-item #{pluralize exercise.reps, exercise.movement.name} #{exercise.measurement_message} #{exercise.male_rx}#{'/' if exercise.male_rx}#{exercise.female_rx}
-- if Current.user.logged_workout? @workout
-  h2.mt-5 Results
-  table.table.table-hover
-    thead
-      tr
-        th scope="col" Date
-        th scope="col" Results
-    tbody
-      - Current.user.logs.where(workout: @workout).each do |log|
-        tr
-          th scope="row" = link_to log.created_at, log
-          td #{pluralize log.measurement_value, @workout.measurement_message}
-- else
-  = link_to 'Log', new_workout_log_path(@workout), class: 'btn btn-outline-primary'
+.row
+  .col
+    h1 = workout.name
+    p #{workout_objective workout}
+    ul.list-group
+      - workout.exercises.each do |exercise|
+        li.list-group-item #{pluralize exercise.reps, exercise.movement.name} #{exercise.measurement_message} #{exercise.male_rx}#{'/' if exercise.male_rx}#{exercise.female_rx}
+    = link_to 'Log', new_workout_log_path(@workout), class: 'mt-3 btn btn-block btn-outline-primary'
+    - if Current.user.logged_workout? @workout
+      h2.mt-3 Results
+      table.table.table-hover
+        thead
+          tr
+            th scope="col" Date
+            th scope="col" Results
+        tbody
+          - Current.user.logs.where(workout: @workout).each do |log|
+            tr
+              th scope="row" = link_to log.created_at, log
+              td #{pluralize log.measurement_value, @workout.measurement_message}
