--- a/app/views/workouts/_workout.html.slim
+++ b/app/views/workouts/_workout.html.slim
@@ -1,10 +1,19 @@
 .row
+
+.row
   .col
-    h1 = workout.name
     p #{workout_objective workout}
+  h4.col.text-right = link_to edit_workout_path(workout)
+    i.fas.fa-edit
+.row
+  .col
     ul.list-group
       - workout.exercises.each do |exercise|
-        li.list-group-item #{pluralize exercise.reps, exercise.movement.name} #{exercise.measurement_message} #{exercise.male_rx}#{'/' if exercise.male_rx}#{exercise.female_rx}
+        li.list-group-item
+          span
+            | #{pluralize exercise.reps, exercise.movement.name}
+            | &nbsp;#{pluralize(exercise.measurement_value, exercise.movement.measurement_unit) unless exercise.measurement_value.blank?}
+            | &nbsp;#{exercise.male_rx}#{'/' if exercise.male_rx}#{exercise.female_rx}
     = link_to 'Log', new_workout_log_path(@workout), class: 'mt-3 btn btn-block btn-outline-primary'
     - if Current.user.logged_workout? @workout
       h2.mt-3 Results
