--- a/app/views/workouts/_workout.html.slim
+++ b/app/views/workouts/_workout.html.slim
@@ -21,4 +21,4 @@
           - Current.user.logs.where(workout: @workout).each do |log|
             tr
               th scope="row" = link_to log.created_at, log
-              td #{pluralize log.measurement_value, @workout.measurement_unit}
+              td #{pluralize log.measurement_value, @workout.measurement.unit if @workout.measurement} 
