Add measurement to exercise and movement log

--- a/app/views/movement_logs/personal_records.html.slim
+++ b/app/views/movement_logs/personal_records.html.slim
@@ -4,7 +4,7 @@
     thead
       tr
         th scope="col" Movement
-        th scope="col" Weight
+        th scope="col" Record
     tbody
       - @movement_logs.each do |pr|
         tr
