--- a/app/views/workouts/_exercise_fields.html.slim
+++ b/app/views/workouts/_exercise_fields.html.slim
@@ -6,8 +6,10 @@
           i.fas.fa-trash-alt
     .row
       .col-sm-3. = f.input :reps
-      .col = f.association :movement, collection: Movement.all.order(:name)
+      .col = f.input :movement
+        = f.select :movement_id, Movement.all.order(:name).map { |m| [m.name, m.id, { data: { measurementId: m.measurement.id } } ] }, { include_blank: true }, class: 'form-control exercise-movement'
     .row
       .col = f.input :male_rx
       .col = f.input :female_rx
+      .col-sm-3 = f.association :measurement, collection: Measurement.all.order(:name), input_html: { class: 'exercise-measurement' }
       .col-sm-3 = f.input :measurement_value
