--- a/app/views/workouts/_exercise_fields.html.slim
+++ b/app/views/workouts/_exercise_fields.html.slim
@@ -7,7 +7,7 @@
     .row
       .col-sm-3. = f.input :reps
       .col = f.input :movement
-        = f.select :movement_id, Movement.all.order(:name).map { |m| [m.name, m.id, { data: { measurementId: m.measurement.id } } ] }, { include_blank: true }, class: 'form-control exercise-movement'
+        = f.select :movement_id, Movement.all.order(:name).map { |m| [m.name, m.id, { data: { measurement_id: m.measurement.id } } ] }, { include_blank: true }, class: 'form-control exercise-movement'
     .row
       .col = f.input :male_rx
       .col = f.input :female_rx
