--- a/app/views/workouts/_workout.html.slim
+++ b/app/views/workouts/_workout.html.slim
@@ -1,24 +1,1 @@
-.row
-  p.col #{workout_objective workout}
-  .col.text-right
-    = link_to edit_workout_path(workout)
-      i.fas.fa-edit
-.row
-  .col
-    ul.list-group
-      - workout.exercises.each do |exercise|
-        li.list-group-item
-          span = exercise_message(exercise)
-    = link_to 'Log', new_workout_log_path(@workout), class: 'mt-3 btn btn-block btn-outline-primary'
-    - if Current.user.logged_workout? @workout
-      h2.mt-3 Results
-      table.table.table-hover
-        thead
-          tr
-            th scope="col" Date
-            th scope="col" Results
-        tbody
-          - Current.user.logs.where(workout: @workout).each do |log|
-            tr
-              th scope="row" = link_to log.created_at, log
-              td #{pluralize log.measurement_value, @workout.measurement.unit if @workout.measurement} 
+= link_to workout.name, workout, class: "list-group-item list-group-item-action #{'list-group-item-success' if Current.user.logged_workout? workout}"
