Add Notes to workout

--- a/app/views/workouts/_form.html.slim
+++ b/app/views/workouts/_form.html.slim
@@ -11,6 +11,7 @@
           span.input-group-text minutes
     .col-sm-4 = f.input :interval
     .col-12 = f.input :measurement_id, collection: Measurement.all
+    .col = f.input :notes
   hr
   h3 Exercises
   #exercises
