--- a/app/views/workouts/show.html.slim
+++ b/app/views/workouts/show.html.slim
@@ -16,7 +16,7 @@
             span = exercise_message(exercise)
       - if @workout.notes
         b Notes
-        p = @workout.notes
+        .notes = simple_format @workout.notes
       = link_to 'Log', new_workout_log_path(@workout), class: 'btn btn-block btn-outline-primary'
       - if Current.user.logged_workout? @workout
         h2.mt-3 Results
