--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,6 +17,7 @@ html lang="en"
             span.navbar-toggler-icon
           .collapse.navbar-collapse#navbarSupportedContent
             .navbar-nav.mr-auto
+              = link_to 'Programs', programs_path, class: 'nav-item nav-link'
               = link_to 'Workouts', workouts_path, class: 'nav-item nav-link'
               = link_to 'PRs', personal_records_user_movement_logs_path(Current.user), class: 'nav-item nav-link'
             .navbar-nav
