Update measurements as the enum

--- a/app/views/workouts/_exercise_fields.html.slim
+++ b/app/views/workouts/_exercise_fields.html.slim
@@ -1,15 +1,14 @@
 .nested-fields.card.mb-3
   .card-body
     .row
-      .col.text-right
-        = link_to_remove_association f, class: 'text-danger'
-          i.fas.fa-trash-alt
-    .row
       .col = f.input :movement
-        = f.select :movement_id, Movement.all.order(:name).map { |m| [m.name, m.id, { data: { measurement_id: m.measurement.id } } ] }, { include_blank: true }, class: 'form-control exercise-movement form-control-sm'
+        = f.select :movement_id, Movement.all.order(:name).map { |m| [m.name, m.id, { data: { measurement_id: m.measurement_id } } ] }, { include_blank: true }, class: 'form-control exercise-movement form-control-sm'
     .row
       .col#metrics
         = f.simple_fields_for :metrics do |metric_form|
           = render 'metric_fields', f: metric_form
         .links
-          = link_to_add_association 'Add Metric', f, :metrics, class: 'btn btn-outline-primary btn-block'
+          = link_to_add_association 'Add Metric', f, :metrics, class: 'btn btn-sm btn-outline-primary btn-block'
+    .row
+      .col
+        = link_to_remove_association 'Delete Exercise', f, class: 'btn btn-sm btn-danger btn-block mt-2'
