--- a/app/views/workouts/_metric_fields.html.slim
+++ b/app/views/workouts/_metric_fields.html.slim
@@ -1,9 +1,8 @@
 .nested-fields
-  hr
   .row
     .col-4
       = f.input :value
-    .col = f.association :measurement, collection: Measurement.all.order(:name), input_html: { class: 'form-control form-control-sm' }
+    .col = f.input :measurement, collection: Metric.measurements, input_html: { class: 'form-control form-control-md' }
     .col-auto.text-right.align-self-center
       = link_to_remove_association f, class: 'text-danger'
         i.fas.fa-trash-alt
