--- a/app/views/programs/show.html.slim
+++ b/app/views/programs/show.html.slim
@@ -6,7 +6,7 @@
       .col.text-right
         = link_to '+Follow', subscribe_program_path(@program), class: 'btn btn-primary', method: :post
   - @program.schedules.order(posted_at: :desc).each do |schedule|
-    h4.mb-3.border-bottom = schedule.posted_at.to_date
+    h4.mb-3.border-bottom = local_time(schedule.posted_at.to_date, '%B %e, %Y')
     .row
       .col
         b #{schedule.workout.name}
