--- a/app/views/workouts/_form.html.slim
+++ b/app/views/workouts/_form.html.slim
@@ -1,7 +1,7 @@
 = simple_form_for @workout do |f|
   = f.error_notification
   .form-inputs.row
-    .col-12 = f.input :name
+    .col-12 = f.input :name, input_html: { value: f.object.name || generate_workout_name }
     .col-sm-4 = f.input :rounds
     .col-sm-4
       = f.label :time
