--- a/app/views/workouts/_metric_fields.html.slim
+++ b/app/views/workouts/_metric_fields.html.slim
@@ -1,7 +1,6 @@
 .nested-fields
   .row
-    .col-4
-      = f.input :value
+    .col-4 = f.input :value
     .col = f.input :measurement, collection: Metric.measurements, input_html: { class: 'form-control form-control-md' }
     .col-auto.text-right.align-self-center
       = link_to_remove_association f, class: 'text-danger'
