--- a/app/views/workouts/_exercise_fields.html.slim
+++ b/app/views/workouts/_exercise_fields.html.slim
@@ -6,8 +6,7 @@
           i.fas.fa-trash-alt
     .row
       .col-sm-3. = f.input :reps, input_html: { class: 'form-control-sm' }
-      .col = f.input :movement
-        = f.select :movement_id, Movement.all.order(:name).map { |m| [m.name, m.id, { data: { measurement_id: m.measurement.id } } ] }, { include_blank: true }, class: 'form-control exercise-movement form-control-sm'
+      .col = f.input :movement_id, collection: Movement.all.order(:name), prompt: 'Select Movement'
     .row
       .col = f.input :male_rx, input_html: { class: 'form-control-sm' }
       .col = f.input :female_rx, input_html: { class: 'form-control-sm' }
