Change schedule date header to better reflect date

--- a/app/views/schedules/index.html.slim
+++ b/app/views/schedules/index.html.slim
@@ -4,7 +4,7 @@
   - else
     .row.my-2
       .col.text-left = link_to_next_page @dates, '<', class: 'btn btn-primary'
-      h3.col.auto.text-center = local_time(@date, '%A %B %e, %Y')
+      h3.col-auto.text-center = local_time(@date, '%A %B %e, %Y')
       .col.text-right = link_to_prev_page @dates, '>', class: 'btn btn-primary'
     - @schedules.each do |schedule|
       .row.my-3.pt-3.border-top
