--- a/app/views/workouts/_exercise_fields.html.slim
+++ b/app/views/workouts/_exercise_fields.html.slim
@@ -1,7 +1,8 @@
-.nested-fields.card.mb-3
+.exercise.nested-fields.card.mb-3
   .card-body
     .row
       .col = f.input :movement_id, collection: Movement.all.order(:name), prompt: 'Select Movement'
+      .col-2 = f.input :position
     .row
       .col#metrics
         = f.simple_fields_for :metrics do |metric_form|
