--- a/app/views/workouts/show.html.slim
+++ b/app/views/workouts/show.html.slim
@@ -18,10 +18,16 @@
         i.fas.fa-edit
   .row
     .col
-      ul.list-group.mb-3
-        - @workout.exercises.each do |exercise|
-          li.list-group-item
-            span = measurable_message(exercise)
+      ul.list-unstyled.mb-3
+        - in_segment = nil
+        - @workout.exercises.order(:position).each do |exercise|
+            - if exercise.segment.present?
+              - unless in_segment
+                li = segment_objective(exercise.segment)
+              li.ml-4 #{measurable_message(exercise)}
+            - else
+              li #{measurable_message(exercise)}
+            - in_segment = exercise.segment.present?
       - unless @workout.notes.blank?
         b Notes
         .notes = simple_format @workout.notes
