--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
 // @import "variables";
 @import "bootstrap";
 @import "segments";
-@import "selectize/dist/css/selectize.bootstrap3.css";
+@import "selectize/dist/css/selectize.bootstrap3";
 
 .auth-links {
   li:not(:last-of-type):after {
