--- a/app/views/schedules/index.html.slim
+++ b/app/views/schedules/index.html.slim
@@ -18,9 +18,7 @@
         p.col #{workout_objective schedule.workout}
       .row
         ul.list-unstyled.col
-          - schedule.workout.exercises.each do |exercise|
-            li = measurable_message(exercise)
-          = simple_format schedule.workout.notes
+          = render partial: 'exercises/exercises', object: schedule.workout.exercises.order(:position)
       .row
         .col-12
           = link_to 'Log', new_workout_log_path(schedule.workout), class: 'btn btn-block btn-outline-primary'
